deeva.css
:root{
  --pri-color: #48A9A6;
  --sec-color: #FFB49A;
  --txt-color: #2d243d;
  --hlt-color: #4b5152;
  --txs-color: #3b4144;
  --acn-color: #00adbb;
  --nvy-color: #052286;
  --nvy-color: #172A3A;
  --min-color: #9506be;
  --max-color: #31d4c1;
  --lnd-black: #004346;
}
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-family: 'Kanit', sans-serif;
}
a{
  text-decoration: none;
  outline: none;
} 
p{ 
  font-family: 'Kanit', sans-serif;
  font-weight: 200;
  outline: none;
}

section{
  margin: 85px 0;
  /* overflow: hidden; */
}
.section-title{
  margin-bottom: 15px;
  font-size: 2.5rem;
  font-size: clamp(0.9rem, 1vw + 1.5rem, 4rem);
  font-weight: 600;
  color: rgb(59, 65, 68);
  color: var(--txt-color);
  font-family: dosis;   
}
@media screen and (max-width: 991px) {
  .section-title{
    margin-bottom: 15px;
    /* font-size: 2.5rem; */
    font-weight: 600; 
  }
}
.container{
  width: 85%;
  margin: 0 auto;
}
/* ***********HEADER Section Ruleset*************** */
  #header{
    position: fixed;  
    width: 100vw;
    height: auto;
    z-index: 1010;
    left: 0;
    top: 0;
    box-shadow: 0 0 25px 5px rgba(0, 0, 0, .12);
  }
  #header .brand{
    height: 100%; 
    padding-top: 5px; 
  
  }
  #header .brand img{
    height: 95%; 
  }
  #header div.header.container{
    width: 100vw;
    padding: .4em;
    height: 7vh; 
    background-color: #fff;
    overflow: hidden;
  }   
  .header .navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 100%;   
  } 
  #header nav ul{
    list-style: none;
    position: absolute;
    background-color: rgb(31, 30, 30);
    width: 100vw;
    height: 100vh;
    left: 100%;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    z-index: 20;
    overflow-x: hidden;
    transition: .5s left ease;
    overflow: hidden; 
  }
  #header nav ul.active{
    left: 20%;
  }
  #header nav ul li{
    display: inline-block;
    position: relative; 
    right: 20%; 
    width: 80%;
    text-align: right;
  }
  #header nav ul a{
    font-size: .95rem;
    font-weight: 300; 
    color: #fff; 
    padding: .75em;
    display: block;
    position: relative;
    transition: color .5s ease;
    text-transform: uppercase;
  }
  #header nav ul a::after{
    position: absolute;
    content: attr(data-after);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0);
    color: rgba(240, 248, 255, 0.021);
    font-size: 2.5rem;
    letter-spacing: 10px;
    z-index: -1;
    transition: letter-spacing .5s ease;
  }
  #header nav ul li:hover a::after{
    transform: translate(-50%, -50%) scale(1);
    letter-spacing: initial;
  }
  #header nav ul li:hover a{
    color: dodgerblue;
  }

  #header .hamburger{
    z-index: 100;
    height: 45px;
    width: 45px;
    display: inline-block;
    border: 3px solid #30d3c0;
    border-radius: 50%;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    transform: scale(.8);  
  }
  #header .hamburger::after{
    position: absolute;
    content: "";
    height: 100%;
    width: 100%;
    border-radius: 50%;
    border: 3px solid #30d3c0;
    animation: ham_pulse 1.5s ease infinite;
  }
  @keyframes ham_pulse{
    0%{
      opacity: 1;
      transform: scale(1);
    }
    100%{
      opacity: 0;
      transform: scale(1.35);
    }
  }
  #header .hamburger .bar{
    height: 2px;
    width: 27px;
    position: relative;
    background-color: #30d3c0;
    z-index: -1;
    border-radius: 20px;
  }
  #header .hamburger .bar::before,
  #header .hamburger .bar::after{
    position: absolute;
    content: "";
    height: 100%;
    width: 100%;
    left: 0;
    background-color: #30d3c0;
    transition:  .3s ease;
    transition-property: top, bottom;
  }
  #header .hamburger .bar::before{
    top: 6px;
  }
  #header .hamburger .bar::after{
    bottom: 6px; 
  }

  #header .hamburger.active .bar::before {
    top: 0; 
  }
  #header .hamburger.active .bar::after {
    bottom: 0; 
  }
/* ... */

